[package]
name = "goquant-liquidation-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.6", features = ["ws"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# Database
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono"
] }

# Env, logging
dotenvy = "0.15"
env_logger = "0.10"
log = "0.4"

# Utils
dashmap = "5"
anyhow = "1"
tower = "0.4"
